syntax = "proto3";

package proto;
option go_package = "./proto";

import "common.proto";
import "google/protobuf/timestamp.proto";

message DialogMessage {
  MessageID messageID = 1;
  UserID senderID = 2;
  string text = 3;
  google.protobuf.Timestamp createdAt = 4;
  bool selfMessage = 5;
}

message Dialog {
  DialogID dialogID = 1;
  string name = 2;
  uint64 unreadMessagesCount = 3;
  DialogMessage lastMessage = 4;
  DialogMessage lastReadMessage = 5;
}

message GetDialogsRequest {
  uint64 offset = 1;
  uint64 limit = 2;
}

message GetDialogsResponse { repeated Dialog dialogs = 1; }

message GetDialogMessagesRequest {
  enum OffsetType {
    BEFORE = 0;
    AFTER = 1;
  }

  DialogID dialogID = 1;
  MessageID messageID = 2;
  uint64 limit = 3;
  OffsetType offsetType = 4;
}

message GetDialogMessagesResponse { repeated DialogMessage messages = 1; }

message CreateDialogMessageRequest {
  DialogID dialogID = 1;
  string text = 2;
}

message CreateDialogMessageResponse {
  MessageID messageID = 1;
  google.protobuf.Timestamp createdAt = 2;
}

message ReadAllMessagesBeforeRequest {
  DialogID dialogID = 1;
  MessageID messageID = 2;
}

service DialogService {
  rpc CreateDialogWith(UserID) returns (Dialog) {}
  rpc GetDialogByID(DialogID) returns (Dialog) {}
  rpc GetDialogs(GetDialogsRequest) returns (GetDialogsResponse) {}
  rpc CreateDialogMessage(CreateDialogMessageRequest)
      returns (CreateDialogMessageResponse) {}
  rpc GetDialogMessages(GetDialogMessagesRequest)
      returns (GetDialogMessagesResponse) {}
  rpc ReadAllMessagesBeforeAndIncl(ReadAllMessagesBeforeRequest)
      returns (Void) {}

  rpc Ping(Void) returns (Pong) {}
}
